--- a/MentorJ.Android/Resources/layout/Login.axml
+++ b/MentorJ.Android/Resources/layout/Login.axml
@@ -11,7 +11,7 @@
         android:src="@drawable/samplelogo"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:id="@+id/imageLogo"
+        android:id="@+id/imgLogo"
         android:layout_weight="30"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp" />
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
-        android:id="@+id/textCaption"
+        android:id="@+id/txtCaption"
         android:gravity="center"
         android:textAllCaps="true"
         android:textStyle="bold" />
@@ -30,13 +30,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
-        android:id="@+id/editUsername"
+        android:id="@+id/editEmail"
         android:background="@drawable/edittextstyle"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:hint="Username"
+        android:hint="Email"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="5dp"
@@ -62,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
-        android:id="@+id/buttonLogin"
+        android:id="@+id/btnLogin"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50dp"
@@ -77,7 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
-        android:id="@+id/textForgotPassword"
+        android:id="@+id/btnForgotPw"
         android:textColor="@android:color/white"
         android:stateListAnimator="@null"
         android:gravity="center"
@@ -89,7 +89,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
-        android:id="@+id/textRegister"
+        android:id="@+id/btnRegister"
         android:textColor="@android:color/white"
         android:stateListAnimator="@null"
         android:textStyle="italic"
