--- a/MentorJ.Android/Resources/layout/ProfilePage.axml
+++ b/MentorJ.Android/Resources/layout/ProfilePage.axml
@@ -12,4 +12,13 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:id="@+id/txtMyProfile" />
+    <View
+          android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:background="@android:color/darker_gray" />
+    <FrameLayout
+        android:id="@+id/sample_content_fragment"
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="0px" />
 </LinearLayout>
