--- a/MentorJ.Android/Resources/layout/ProfilePage.axml
+++ b/MentorJ.Android/Resources/layout/ProfilePage.axml
@@ -3,8 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
+    android:background="#E2E2E2"
+    android:id="@+id/main_profile_layout">
     <TextView
         android:text="My Profile"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -13,9 +13,9 @@
         android:gravity="center"
         android:id="@+id/txtMyProfile" />
     <View
-          android:layout_width="match_parent"
-          android:layout_height="1dp"
-          android:background="@android:color/darker_gray" />
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
     <FrameLayout
         android:id="@+id/sample_content_fragment"
         android:layout_weight="2"
