--- a/MentorJ.Android/Resources/layout/ProfilePage.axml
+++ b/MentorJ.Android/Resources/layout/ProfilePage.axml
@@ -20,5 +20,7 @@
         android:id="@+id/sample_content_fragment"
         android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="0px" />
+        android:layout_height="0px"
+        android:minWidth="25px"
+        android:minHeight="25px" />
 </LinearLayout>
