--- a/MentorJ.Android/Resources/layout/GroupsPage.axml
+++ b/MentorJ.Android/Resources/layout/GroupsPage.axml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:minWidth="25px"
-    android:minHeight="25px"
-    android:background="@drawable/backgroundgradient">
-    <EditText
+  android:orientation="vertical"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
+  
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText1"
-        android:hint="Testing"
-        android:textColor="#000"
-        android:background="@drawable/edittextstyle" />
+        android:layout_height="match_parent"
+        
+  />
+
+
 </LinearLayout>
